# rust_projects

blockchain/: Cargo.toml
blockchain/src/: blockchain.rs  main.rs
chat_client/src/: main.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs
snake/: Cargo.toml
snake/src/: draw.rs  game.rs  main.rs  snake.rs
